Is this a Maven maven?

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>Mortal Koding</artifactId>
     <version>0.69-GIGGITY</version>
 
-    
+    <properties>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
+    </properties>
+
 </project>
