--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.15.1
+            </version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
             <version>1.1.1</version>
@@ -42,9 +49,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <target>10</target>
-                    <source>10</source>
-                    <release>10</release>
+                    <target>11</target>
+                    <source>11</source>
+                    <release>11</release>
                 </configuration>
             </plugin>
         </plugins>
